<resources>
    <string name="app_name">CA01</string>
    <string name="title">CA01 Form</string>
    <string name="name">Name</string>
    <string name="your_name">Your name</string>
    <string name="sample_mail">Your mail</string>
    <string name="email">Email</string>
    <string name="occupation_prompt">Occupation</string>
    <string name="salary_prompt">Salary</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="non_binary">Non Binary</string>
    <string name="submit">Submit</string>
    <string name="gender_prompt">Gender</string>
</resources>